# ai-demo

./: Cargo.toml  README.md
src/binaries/: Cargo.toml
src/binaries/app/: main.rs
src/binaries/qwen/: main.rs
src/common/base/: Cargo.toml
src/common/base/src/: lib.rs
src/openchat/: Cargo.toml
src/openchat/src/: lib.rs  service.rs  token_output_stream.rs
src/qwen/: Cargo.toml
src/qwen/service/: Cargo.toml
