[package]
name = "ai-binaries"
description = "ai-binaries"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qwen = { path =  "../qwen"}
openchat = { path =  "../openchat"}


[[bin]]
name = "app"
path = "app/main.rs"
doctest = false
test = false