[package]
name = "openchat"
description = "openchat service"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = true

[dependencies]
common-base = { path = "../common/base" }
anyhow = "1.0.83"
candle-core = { version="0.5.0", features = ["metal"]}
tokenizers = "0.19.1"
candle-transformers = { version = "0.5.0" , features = ["metal"]}