[package]
name = "common-base"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = false

[dependencies]
candle-core = { version="0.5.0", features = ["metal"]}
tokenizers = "0.19.1"
